refactor: 优化批量下载方法